feat, api: added /attachments endpoints
